@@ -1,3 +1,6 @@
+2008-10-08
+	Added optional iconResourceID to systools.win.Tools.replaceExeIcon(). [IT]
+	
 2008-10-02
 	0.15 Rebuilt Windows .ndll - some odd build compatability crept in 
 	last time around making it so the DLL didn't load on Win98. Now fixed. [IT]
